src/objects/cost_of_campaign_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <label>Email Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cost_of_campaign__c</fullName>
        <label>cost of campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>$ cost of campaign Snapshot</label>
    <nameField>
        <label>$ cost of campaign Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>$ cost of campaign Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>